--- a/engine/public/index.html
+++ b/engine/public/index.html
@@ -29,6 +29,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="%PUBLIC_URL%/neutralino.js"></script>
+    <script src="http://localhost:62714/neutralino.js"></script>
   </body>
 </html>
